# Tracers

./: CMakeLists.txt  LICENSE  README.md  Settings.cpp  Settings.h  TracersApp.cpp  TracersApp.h
Shaders/: EFT.slang  Lights.slang  Main.ps.slang  Polynomial.slang  PolynomialFitting.slang  Ray.slang  Settings.slang  Surfaces.slang
Shaders/Rootfinders/: LUTrace.slang  RayMarch.slang  Rootfinders.slang  YukselBracketed.slang
